# active-trace

./: .gitignore  AGENTS.md  CHANGES.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d4e075e67f3_001_create_tenant.py  8730994b28f2_003_rol_permiso_user_rol.py  a0b1c2d3e4f5_011_programa_materia_fecha_academica.py  a1b2c3d4e5f6_007_version_padron.py  a2b3c4d5e6f7_002_create_user_refresh_recovery.py  a5b6c7d8e9f0_015_perfil_sexo.py  b1c2d3e4f5a6_012_evaluacion_reserva_resultado.py  b5c6d7e8f9a0_005_carrera_cohorte_materia.py  b6c7d8e9f0a1_016_mensajeria_interna.py  c05af7b8d9e1_004_audit_log.py  c6d7e8f9a0b1_006_usuario_pii_asignacion.py  c7d8e9f0a1b2_017_encuentros_guardias.py  d4e5f6a7b8c9_013_aviso_acknowledgment.py  d7e8f9a0b1c2_008_calificacion_umbral_materia.py  d8e9f0a1b2c3_018_tarea_comentario_tarea.py  e8f9a0b1c2d3_009_finalizacion_actividad.py  f6a7b8c9d0e1_014_liquidacion_honorarios.py  f9a0b1c2d3e4_010_comunicacion.py
backend/app/: main.py
backend/app/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/core/: audit_codes.py  config.py  database.py  dependencies.py  encryption.py  exceptions.py  logging.py  observability.py  permissions.py  security.py  tenancy.py
backend/scripts/: seed_admin.py  seed_demo_academico.py  seed_permissions.py  seed_tenant.py
backend/tests/: conftest.py  test_analisis.py  test_app_startup.py  test_asignaciones.py  test_audit_log.py  test_auditoria.py  test_auth_router_integration.py  test_auth_schemas.py  test_auth_service.py  test_avisos.py  test_base_mixin.py  test_base_repository.py  test_calificaciones.py  test_coloquios.py  test_comunicaciones.py  test_database.py  test_encryption.py  test_encuentros.py  test_equipos.py  test_estructura_academica.py  test_facturas.py  test_finalizacion_parser.py  test_get_current_user.py  test_grilla_salarial.py  test_guardias.py  test_health.py  test_inbox.py  test_liquidaciones.py  test_me_asignaciones.py  test_moodle_ws.py  test_padron.py  test_perfil.py  test_permissions.py  test_programas_y_fechas.py  test_rate_limiter.py  test_recovery_token_model.py  test_recovery_token_repository.py  test_refresh_token_model.py  test_refresh_token_repository.py  test_security.py  (+7 more)
(+384 files in other folders)
