[project]
name = "activia-trace"
version = "0.1.0"
description = "Plataforma de gestión académica y trazabilidad multi-tenant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.0",
    "passlib[argon2]>=1.7.4",
    "email-validator>=2.2.0",
    "pyotp>=2.10.0",
    "cryptography>=44.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["app"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
